resolved(overflow): update pipeline scrollbar

--- a/src/stylesheets/pages/_pipelines.scss
+++ b/src/stylesheets/pages/_pipelines.scss
@@ -30,7 +30,7 @@
     padding: 7px 0;
 }
 
-.scroll-menu {
+#scroll-menu {
     overflow-x: scroll;
     white-space: nowrap;
 }
@@ -52,4 +52,45 @@
             background: #D4D4D4;
         }
     }
+}
+
+.pipeline-ear {
+    position: absolute;
+    height: 92%;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+}
+
+.scroll-right {
+    right: 20px;
+    @extend .pipeline-ear;
+}
+
+.scroll-left {
+    margin-left: 1px;
+    @extend .pipeline-ear;
+}
+
+.arrow {
+    display: flex;
+    align-items: center;
+    background-color: #BDBDBD;
+    height: 75px;
+    width: 35px;
+    opacity: 0.6;
+    &:hover {
+        background-color: red;
+    }
+}
+
+.arrow-left {
+    @extend .arrow;
+    border-radius: 0px 50px 50px 0px;
+}
+
+.arrow-right {
+    justify-content: flex-end;
+    @extend .arrow;
+    border-radius: 50px 0px 0px 50px;
 }
